0.1.0 (unreleased)
==================

- Bucket name is now read from ``storage.aws.bucket_name`` setting, as stated
  in documentation.
- ACL is now read from ``storage.aws.acl`` setting, as stated in documentation.

0.0.8 (2014-10-1)
==================

Allow all extensions with 'any' group

0.0.7 (2014-06-13)
==================

Fixing bug for detecting extensions such as csv

0.0.5 (2013-12-20)
==================

Added save_file and save_filename methods

0.0.4 (2013-12-20)
==================

Added S3 functionality

0.0.3 (2013-12-18)
==================

Added PDF to document extensions list

0.0.2 (2013-12-17)
==================

Version bump to include setup.cfg and sphinx conf changes.