@@ -4,6 +4,7 @@ import os
 import mimetypes
 
 from pyramid import compat
+from pyramid.settings import asbool
 from zope.interface import implementer
 
 from . import utils
@@ -28,32 +29,65 @@ class S3FileStorage(object):
     @classmethod
     def from_settings(cls, settings, prefix):
         options = (
-            ('aws.access_key', True, None),
-            ('aws.secret_key', True, ''),
             ('aws.bucket_name', True, None),
             ('aws.acl', False, 'public-read'),
             ('base_url', False, ''),
             ('extensions', False, 'default'),
+            # S3 Connection options.
+            ('aws.access_key', False, None),
+            ('aws.secret_key', False, None),
+            ('aws.use_path_style', False, False),
+            ('aws.is_secure', False, True),
+            ('aws.host', False, None),
+            ('aws.port', False, None),
+            ('aws.region', False, None),
+            ('aws.num_retries', False, 1),
+            ('aws.timeout', False, 5),
         )
         kwargs = utils.read_settings(settings, options, prefix)
         kwargs = dict([(k.replace('aws.', ''), v) for k, v in kwargs.items()])
+        kwargs['aws_access_key_id'] = kwargs.pop('access_key')
+        kwargs['aws_secret_access_key'] = kwargs.pop('secret_key')
         return cls(**kwargs)
 
-    def __init__(self, access_key, secret_key, bucket_name,
-                 acl=None, base_url='', extensions='default'):
-        self.access_key = access_key
-        self.secret_key = secret_key
+    def __init__(self, bucket_name, acl=None, base_url='',
+                 extensions='default', **conn_options):
         self.bucket_name = bucket_name
         self.acl = acl
         self.base_url = base_url
         self.extensions = resolve_extensions(extensions)
+        self.conn_options = conn_options
 
     def get_connection(self):
         try:
-            from boto.s3.connection import S3Connection
+            import boto
         except ImportError:
             raise RuntimeError("You must have boto installed to use s3")
-        return S3Connection(self.access_key, self.secret_key)
+
+        from boto.s3.connection import OrdinaryCallingFormat
+        from boto.s3 import connect_to_region
+
+        options = self.conn_options.copy()
+        options['is_secure'] = asbool(options['is_secure'])
+        options['port'] = int(options['port'])
+
+        if asbool(options.pop('use_path_style')):
+            options['calling_format'] = OrdinaryCallingFormat()
+
+        num_retries = int(options.pop('num_retries'))
+        timeout = float(options.pop('timeout'))
+
+        region = options.pop('region')
+        if region:
+            del options['host']
+            del options['port']
+            conn = connect_to_region(region, **options)
+        else:
+            conn = boto.connect_s3(**options)
+
+        conn.num_retries = num_retries
+        conn.http_connection_kwargs['timeout'] = timeout
+        return conn
 
     def get_bucket(self):
         return self.get_connection().get_bucket(self.bucket_name)
