@@ -4,4 +4,5 @@ envlist = py26,py27,py34
 deps=
     pytest
     mock
+    moto
 commands=py.test  # or 'nosetests' or ...
